v1.0.x -
Additions:
* Backdrops:
	- Custom Backdrop support! with contents/backdrops.xml!
	- Custom attribute reftype to specify the base backdrop for the custom ones
	- Isaac.GetBackdropTypeByName (self-explanatory make sure to give your backdrops a name!)
	- MC_PRE/POST_BACKDROP_CHANGE callback accepting callbacktype as a return value on pre and recieving callbacktype as a param
* Familiar :
	- RemoveFromPlayer
* EntityNPC :
	- GetDarkRedChampionRegenTimer
* EntityPlayer:
	- GetUrnSouls
* Minimap :
	- SetState
	- SetHoldTime
* XMLData :
	- XMLData.GetEntryByOrder: gets entries in the order they appear on the xmls.
* Callbacks :
	- MC_POST_NPC_DARK_RED_CHAMPION_REGEN: Called right after a dark red champion regenerates out of goo form
	- MC_POST_ACHIEVEMENT_UNLOCK: Called after an achievement is unlocked, has the achievement id as its param
	- MC_PRE/POST_MINIMAP_UPDATE: Called right before or right after the minimap is updated
	- MC_PRE/POST_MINIMAP_RENDER: Called right before or right after the minimap is rendered
  	- MC_PRE/POST_PLAYER_ADD_HEARTS(EntityPlayer Player, int Amount, AddHealthType AddHealthType, bool OptionalArg): Called when hearts are added to the player, allows changing the added amount of hearts.
	- MC_POST_RENDER_PLAYER_HEAD/BODY we had the pre but not the post. Same args as the pre, but with the updated vector if its changed on pre
/newline/
Modified:
* Entity :
	- GetCollisionCapsule offset vector argument is now optional (Vector.Zero)
* Pickup :
	- Pickup:IsBlind method now checks natural blind effect (also added "CheckForcedBlindOnly" optional argument)
* Changed the destination goal sprites from the daily menu to match the style of the other paper sprites
/newline/
Fixes:
	* Fixed a vanilla game crash that happens with detonator+godhead which has been around for years
	* Fixed issue that preventing the root attributes on repentogon-supported xmls(achievements,giantbook,backdrops) from working properly