@@ -353,7 +353,7 @@ HOOK_METHOD(Cutscene, Init, (char* xmlfilepath)-> void) {
 }
 
 
-static std::vector<std::string> ParseCommand2(const std::string &command, int size = 0) {
+std::vector<std::string> ParseCommand2(const std::string &command, int size = 0) {
 	std::vector<std::string> cmdlets;
 
 	std::stringstream sstream(command);
@@ -399,174 +399,6 @@ HOOK_METHOD(Cutscene, Show, (int cutsceneid)-> void) {
 
 //Cutscene XML Hijack
 
-//Stages XML Hijack
-unordered_map<int, tuple<int, int> > stageidtotuple;
-void initstagetotuple() {
-	//Vanilla
-	stageidtotuple[1] = { 1,0 };
-	stageidtotuple[2] = { 1,1 };
-	stageidtotuple[3] = { 1,2 };
-	stageidtotuple[4] = { 3,0 };
-	stageidtotuple[5] = { 3,1 };
-	stageidtotuple[6] = { 1,2 };
-	stageidtotuple[7] = { 5,0 };
-	stageidtotuple[8] = { 5,1 };
-	stageidtotuple[9] = { 5,2 };
-	stageidtotuple[10] = { 7,0 };
-	stageidtotuple[11] = { 7,1 };
-	stageidtotuple[12] = { 7,2 };
-	stageidtotuple[13] = { 9,0 };
-	stageidtotuple[14] = { 10,0 };
-	stageidtotuple[15] = { 10,1 };
-	stageidtotuple[16] = { 11,0 };
-	stageidtotuple[17] = { 11,1 };
-	stageidtotuple[26] = { 12,0 };
-	//Vanilla
-	//Greed
-	stageidtotuple[24] = { 6,0 };
-	stageidtotuple[25] = { 7,0 };
-	//Greed
-	//Repentance
-	stageidtotuple[27] = { 1,4 };
-	stageidtotuple[28] = { 1,5 };
-	stageidtotuple[29] = { 3,4 };
-	stageidtotuple[30] = { 3,5 };
-	stageidtotuple[31] = { 5,4 };
-	stageidtotuple[32] = { 5,5 };
-	stageidtotuple[33] = { 7,4 };
-	stageidtotuple[35] = { 13,0 };
-	//Repentance
-}
-
-bool IsOnSecondFloor() {
-	int stageid = g_Game->_stage;
-	return (stageid == 2) || (stageid == 4) || (stageid == 6) || (stageid == 8) || (g_Game->_curses & (1 << 1)); //has curse XL
-}
-
-tuple<int, int> GetSetStage(int stageid,bool secondfloor) {
-	if (stageidtotuple.empty()) {
-		initstagetotuple();
-	}
-	if (stageidtotuple.count(stageid) > 0) {
-		tuple<int, int> ret = stageidtotuple[stageid];
-		if (secondfloor && (get<0>(ret) < 9)) {
-			ret = { get<0>(ret) + 1,get<1>(ret) };
-		}
-		return ret;
-	}
-	else {
-		return { stageid,0 };
-	}
-}
-
-string ogstagespath;
-int queuedstage = 0;
-int queuedalt = 0;
-int lastrequest = 0;
-/*
-HOOK_STATIC(RoomConfig, GetStageID, (unsigned int LevelStage, unsigned int StageType, unsigned int Mode)-> unsigned int, __cdecl) {
-	unsigned int stageid = super(LevelStage,StageType, Mode);
-	//printf("getstage: %d \n", stageid);
-	return stageid;
-}
-*/
-int lastparentstage=0;
-int setstageoverloadid = 0;
-int setstageoverloadalt = 0;
-/*
-HOOK_METHOD(Level, SetStage, (int a, int b)-> void) {
-	int stageid = a;
-	int alt = b;
-	if (setstageoverloadid > 0) { stageid = setstageoverloadid; setstageoverloadid = 0; }
-	if (setstageoverloadalt > 0) { alt = setstageoverloadalt; setstageoverloadalt = 0; }
-	char* xml = new char[ogstagespath.length() + 1];
-	strcpy(xml, ogstagespath.c_str());
-	tuple<int,int> idx = { stageid,alt };
-	if (XMLStuff.StageData->bystagealt.count(idx) > 0) {
-		XMLAttributes* targetstage = new XMLAttributes(XMLStuff.StageData->nodes[XMLStuff.StageData->bystagealt[idx]]);
-		int parentstage = toint((*targetstage)["basestage"]);
-		if (parentstage == 0) { parentstage = 1; }
-		queuedhackyxmlvalue = stageid;
-		queuedhackyxmltarget = parentstage;
-		queuedhackyxmlmaxval = 36;
-		//if (lastparentstage != stageid) {
-			for (int i = 0; i <= 36; i++) {
-				g_Game->GetRoomConfig()->UnloadStage(i);
-			}
-			g_Game->GetRoomConfig()->LoadStages(xml);
-		//}
-		printf("setstageX: %d %d  \n", stageid, alt);
-		tuple<int, int> setstg = GetSetStage(parentstage, IsOnSecondFloor());
-		super(get<0>(setstg), get<1>(setstg));
-		printf("done");
-		lastparentstage = get<0>(setstg);
-		setstg;
-	}
-	else if (lastparentstage == get<0>(GetSetStage(a, IsOnSecondFloor()))){
-		//no = true;
-		//for (int i = 0; i <= 36; i++) {
-			g_Game->GetRoomConfig()->UnloadStage(stageid);
-		//}
-		g_Game->GetRoomConfig()->LoadStages(xml);
-		super(stageid, alt);
-		lastparentstage = 0;
-	}
-	else {
-		super(stageid, alt);
-	}
-	queuedhackyxmlvalue = 0;
-	queuedhackyxmltarget = 0;
-	mclear(xml);
-}
-*/
-/*
-HOOK_METHOD(RoomConfig, LoadStages, (char* xmlpath)-> void) {
-	if (ogstagespath.length() == 0) {
-		ogstagespath = xmlpath;
-	}
-	printf("stagexml: %s \n", xmlpath);
-	super(xmlpath);
-}
-*/
-tuple<int, int> ConsoleStageIdToTuple(const string &input) {
-	string* numberPart = new string("");
-	int letterValue = 0;
-	for (char c : input) {
-		if (isdigit(c)) {
-			*numberPart += c;
-		}
-		else {
-			if (isalpha(c)) {
-				int x = toint(*numberPart);
-				delete numberPart;
-				return { x ,c - 'a' + 1 };
-			}
-		}
-	}
-	int y = toint(*numberPart);
-	delete numberPart;
-	return { y ,0 };
-}
-
-HOOK_METHOD(Console, RunCommand, (std_string& in, std_string* out, Entity_Player* player)-> void) {
-	if (in.rfind("stage", 0) == 0) {
-		std::vector<std::string> cmdlets = ParseCommand2(in, 2);
-		tuple<int, int> id = ConsoleStageIdToTuple(cmdlets[1]);
-		if (XMLStuff.StageData->bystagealt.count(id) == 0) { //stage 14 works without intervention, lol
-			super(in, out, player);
-			return;
-		}
-		else {
-			//super(in, out, player); //we still run it just in case I dunno, does nothing anyway
-			setstageoverloadid = get<0>(id);
-			setstageoverloadalt = get<1>(id);
-			g_Game->GetConsole()->RunCommand(string("stage 1"), out, player);
-			return;
-		}
-	}
-	super(in, out, player);
-}
-//Stages XML Hijack
 
 //dirty AI things
 bool endsWithPNG(const std::string& str) {
